fixed styling issue with squished boxes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,7 @@ div{
   text-align: center;
   margin: 1em;
   flex: 1;
+  min-width: 200px;
 }
 
 img {
